--- a/main.css
+++ b/main.css
@@ -141,13 +141,15 @@ body {
   margin-left: 85px;
   text-align: center;
   width: 18rem;
+  margin-bottom: -35px;
 }
 /* Ensure cards don't get too big on small screens */
 @media (max-width: 576px) {
   .card {
-    width: 100%;
-    margin-bottom: 20px;
-    margin-left: 1px;
+    width: 80%;
+    height: 90px;
+    margin-bottom: -30px;
+    margin-left: 35px;
   }
 
   .card-img-top {
@@ -156,6 +158,7 @@ body {
 
   .card-body {
     padding: 15px;
+    width: fit-content;
     position: static;
   }
 
